# rd_assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt
frontend/: app.js  index.html  styles.css
src/rd_assistant/: config.py  main.py
src/rd_assistant/api/: __init__.py  server.py
src/rd_assistant/cli/: interface.py
src/rd_assistant/core/: analyzer.py  document.py  editor.py  history.py  memory.py  organizer.py  quality.py  reviewer.py  session_utils.py  storage.py  types.py  understanding.py  vision.py  visualizer.py
src/rd_assistant/llm/: prompts.py  service.py
tests/api/: test_server.py
